# axiom

./: License.txt  ReadMe.md  pyproject.toml
.wiki/: FAQ.md
Documents/: Notebook.ipynb
Files/: setup.py
Files/src/: __init__.py  __main__.py  _helper.py  _helper_cli.py  _main.py  _metadata.py  _setup.py  cli_core.py
Files/src/ai/: AI.ipynb  ReadMe.md  model.py  prep.py
